<resources>
    <string name="app_name">黄龙党建</string>


    <string name="edit_user">请输入用户名</string>
    <string name="edit_user_pass">请输入密码</string>
    <string name="login_btn">登录</string>
    <string name="dynamic">党建动态</string>
    <string name="sociology">经济社会</string>
    <string name="work">工作任务</string>
    <string name="personal">个人中心</string>
    <string name="newaction">最新动态</string>
    <string name="remark">扎实推动经济持续发展</string>
    <string name="oldpw">原密码</string>
    <string name="oldpw1">请输入原始密码</string>
    <string name="newpw">新密码</string>
    <string name="newpw1">请输入新密码</string>
    <string name="againpw">确认密码</string>
    <string name="againpw1">请再次确认新密码</string>
    <string name="note">密码必须至少6位字符</string>
    <string name="finish">完成</string>
    <string name="zhihuidangjian">智慧党建  版权所有</string>
    <string name="userguide">使用手册</string>
    <string name="agreement">服务协议</string>
    <string name="coperight">Copyright © 2017-2019</string>
</resources>
