<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/login_logo" />
    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_below="@+id/login_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/user_name"
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_user"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:lines="1"
            android:maxLength="20"
            android:padding="15dp"
            android:drawableLeft="@mipmap/user"
            android:drawablePadding="15dp"
            android:textSize="14dp"
            android:background="@drawable/login_edit_bg" />
        <EditText
            android:id="@+id/password"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:drawableLeft="@mipmap/password"
            android:lines="1"
            android:maxLength="20"
            android:padding="15dp"
            android:inputType="textPassword"
            android:drawablePadding="15dp"
            android:hint="@string/edit_user_pass"
            android:textSize="14dp"
            android:background="@drawable/login_edit_bg" />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/login_btn_bg"
            android:padding="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/login_btn"
            android:textSize="18dp"
            android:textColor="@color/white" />
    </LinearLayout>
    <TextView
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@color/text_gray"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:textSize="12sp"
        android:text="黄龙县委基层组织建设指挥部"/>
</RelativeLayout>
